crates/pv-release/tests/snapshots/release_records__release_records_reject_identity_mismatches_and_missing_license_metadata-2.snap
---
source: crates/pv-release/tests/release_records.rs
expression: "ReleaseRecord::from_json(Utf8Path::new(\"missing-license.json\"),\n&missing_license,)"
---
Err(
    InvalidReleaseRecord {
        path: "missing-license.json",
        reason: "license_files must not be empty",
    },
)
