crates/pv-release/tests/snapshots/release_records__release_records_reject_invalid_source_inputs.snap
---
source: crates/pv-release/tests/release_records.rs
expression: "(ReleaseRecord::from_json(Utf8Path::new(\"invalid-name.json\"), &invalid_name),\nReleaseRecord::from_json(Utf8Path::new(\"invalid-url.json\"),\n&invalid_source_url),\nReleaseRecord::from_json(Utf8Path::new(\"invalid-sha.json\"),\n&invalid_source_sha256),)"
---
(
    Err(
        InvalidReleaseRecord {
            path: "invalid-name.json",
            reason: "source_inputs.name contains invalid value `PHP source`",
        },
    ),
    Err(
        InvalidReleaseRecord {
            path: "invalid-url.json",
            reason: "source_inputs.source_url must be an https URL with a host",
        },
    ),
    Err(
        InvalidReleaseRecord {
            path: "invalid-sha.json",
            reason: "invalid source_inputs.source_sha256: invalid sha256 `bad`",
        },
    ),
)
