crates/pv-release/tests/snapshots/release_records__revocation_loader_rejects_conflicting_revocations.snap
---
source: crates/pv-release/tests/release_records.rs
expression: load_revocation_records(tempdir.path())
---
Err(
    ConflictingRevocation {
        identity: "redis:7.2:7.2.5-pv1:darwin-arm64",
    },
)
