crates/pv-release/tests/snapshots/release_records__revocation_loader_rejects_duplicate_revocation_records.snap
---
source: crates/pv-release/tests/release_records.rs
expression: result
---
Err(
    DuplicateRevocation {
        identity: "redis:7.2:7.2.5-pv1:darwin-arm64",
    },
)
